<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_off"
        app:layout_constraintStart_toEndOf="@+id/button_on"
        app:layout_constraintTop_toTopOf="@+id/button_on" />

    <Switch
        android:id="@+id/switch_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btswitch_connect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView_btstate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#6200EE"
            android:text="@string/btstate_disconnected"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="italic" />

    </LinearLayout>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/musicbutton_select"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_connect" />

    <ProgressBar
        android:id="@+id/progressBar_upload"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_upload" />

    <Button
        android:id="@+id/button_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_on"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_upload" />

</androidx.constraintlayout.widget.ConstraintLayout>